--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
+  intl: ^0.20.2
   provider: ^6.1.5+1
   supabase_flutter: ^2.10.3
 
